// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should correctly render the default version 1`] = `
.c7 {
  padding: 0 20px 20px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  line-height: 24px;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c9 {
  width: 100%;
  border-width: 0px;
  border-left-width: 0px;
  border-bottom-width: 1px;
  border-color: #D7D7E0;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  z-index: 1;
  background: #FFFFFF;
}

.c0 hr {
  bottom: 0;
  left: 0;
  margin: 0;
  position: absolute;
  z-index: -1;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  padding: 24px 20px;
}

.c1:focus-visible {
  background: #F5F5FA;
}

.c2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: start;
  gap: 0px;
  margin: 8px 0;
}

.c6 {
  height: auto;
  max-height: 9999px;
  overflow: hidden;
  -webkit-transition: max-height 200ms ease-in-out;
  transition: max-height 200ms ease-in-out;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px;
}

.c5 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: all 200ms ease-out 0s;
  transition: all 200ms ease-out 0s;
  fill: #D8385E;
}

<div
  class="c0"
>
  <button
    class="c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
      >
        Default
      </p>
      <p
        class="c4"
        color="deep"
      />
    </div>
    <div
      class="c5"
    >
      <svg
        height="24"
        width="24"
      />
    </div>
  </button>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <p
        class="c8"
      >
        Content
      </p>
    </div>
  </div>
  <hr
    class="c9"
  />
</div>
`;

exports[`<Accordion /> should correctly render the default version with subtitle 1`] = `
.c8 {
  padding: 0 20px 20px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  line-height: 24px;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c10 {
  width: 100%;
  border-width: 0px;
  border-left-width: 0px;
  border-bottom-width: 1px;
  border-color: #D7D7E0;
}

.c11 .c7 {
  padding-bottom: 16px;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  z-index: 1;
  background: #FFFFFF;
}

.c0 hr {
  bottom: 0;
  left: 0;
  margin: 0;
  position: absolute;
  z-index: -1;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  padding: 24px 20px;
}

.c1:focus-visible {
  background: #F5F5FA;
}

.c2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: start;
  gap: 4px;
  margin: 0;
}

.c6 {
  height: auto;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 200ms ease-in-out;
  transition: max-height 200ms ease-in-out;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px;
}

.c5 svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: all 200ms ease-out 0s;
  transition: all 200ms ease-out 0s;
  fill: #D8385E;
}

<div
  class="c0"
>
  <button
    class="c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
      >
        Default
      </p>
      <p
        class="c4"
        color="deep"
      >
        default with subtitle
      </p>
    </div>
    <div
      class="c5"
    >
      <svg
        height="24"
        width="24"
      />
    </div>
  </button>
  <div
    class="c6"
  >
    <div
      class="c7 c8"
    >
      <p
        class="c9"
      >
        Content
      </p>
    </div>
  </div>
  <hr
    class="c10"
  />
</div>
`;

exports[`<Accordion /> should correctly render the default version without side padding 1`] = `
.c8 {
  padding: 0 20px 20px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  line-height: 24px;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c10 {
  width: 100%;
  border-width: 0px;
  border-left-width: 0px;
  border-bottom-width: 1px;
  border-color: #D7D7E0;
}

.c11 .c7 {
  padding-bottom: 16px;
}

.c12 .c7 {
  padding-bottom: 16px;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  z-index: 1;
  background: #FFFFFF;
}

.c0 hr {
  bottom: 0;
  left: 0;
  margin: 0;
  position: absolute;
  z-index: -1;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  padding: 24px 0px;
}

.c1:focus-visible {
  background: #F5F5FA;
}

.c2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: start;
  gap: 0px;
  margin: 8px 0;
}

.c6 {
  height: auto;
  max-height: 9999px;
  overflow: hidden;
  -webkit-transition: max-height 200ms ease-in-out;
  transition: max-height 200ms ease-in-out;
}

.c6 .c7 {
  padding-left: 0;
  padding-right: 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px;
}

.c5 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: all 200ms ease-out 0s;
  transition: all 200ms ease-out 0s;
  fill: #D8385E;
}

<div
  class="c0"
>
  <button
    class="c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
      >
        Default
      </p>
      <p
        class="c4"
        color="deep"
      />
    </div>
    <div
      class="c5"
    >
      <svg
        height="24"
        width="24"
      />
    </div>
  </button>
  <div
    class="c6"
  >
    <div
      class="c7 c8"
    >
      <p
        class="c9"
      >
        Content
      </p>
    </div>
  </div>
  <hr
    class="c10"
  />
</div>
`;

exports[`<Accordion /> should correctly render the small version 1`] = `
.c8 {
  padding: 0 20px 20px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c10 {
  width: 100%;
  border-width: 0px;
  border-left-width: 0px;
  border-bottom-width: 1px;
  border-color: #D7D7E0;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  z-index: 1;
  background: #FFFFFF;
}

.c0 hr {
  bottom: 0;
  left: 0;
  margin: 0;
  position: absolute;
  z-index: -1;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  padding: 16px 20px;
}

.c1:focus-visible {
  background: #F5F5FA;
}

.c2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: start;
  gap: 0px;
  margin: 8px 0;
}

.c6 {
  height: auto;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 200ms ease-in-out;
  transition: max-height 200ms ease-in-out;
}

.c6 .c7 {
  padding-bottom: 16px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px;
}

.c5 svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: all 200ms ease-out 0s;
  transition: all 200ms ease-out 0s;
  fill: #D8385E;
}

<div
  class="c0"
>
  <button
    class="c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
      >
        Small
      </p>
      <p
        class="c4"
        color="deep"
      />
    </div>
    <div
      class="c5"
    >
      <svg
        height="24"
        width="24"
      />
    </div>
  </button>
  <div
    class="c6"
  >
    <div
      class="c7 c8"
    >
      <p
        class="c9"
      >
        Content
      </p>
    </div>
  </div>
  <hr
    class="c10"
  />
</div>
`;

exports[`<Accordion /> should correctly render the small version with subtitle 1`] = `
.c8 {
  padding: 0 20px 20px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c10 {
  width: 100%;
  border-width: 0px;
  border-left-width: 0px;
  border-bottom-width: 1px;
  border-color: #D7D7E0;
}

.c11 .c7 {
  padding-bottom: 16px;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  z-index: 1;
  background: #FFFFFF;
}

.c0 hr {
  bottom: 0;
  left: 0;
  margin: 0;
  position: absolute;
  z-index: -1;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  padding: 16px 20px;
}

.c1:focus-visible {
  background: #F5F5FA;
}

.c2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: start;
  gap: 4px;
  margin: 0;
}

.c6 {
  height: auto;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 200ms ease-in-out;
  transition: max-height 200ms ease-in-out;
}

.c6 .c7 {
  padding-bottom: 16px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px;
}

.c5 svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: all 200ms ease-out 0s;
  transition: all 200ms ease-out 0s;
  fill: #D8385E;
}

<div
  class="c0"
>
  <button
    class="c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
      >
        Small
      </p>
      <p
        class="c4"
        color="deep"
      >
        small with subtitle
      </p>
    </div>
    <div
      class="c5"
    >
      <svg
        height="24"
        width="24"
      />
    </div>
  </button>
  <div
    class="c6"
  >
    <div
      class="c7 c8"
    >
      <p
        class="c9"
      >
        Content
      </p>
    </div>
  </div>
  <hr
    class="c10"
  />
</div>
`;

exports[`<Accordion /> should correctly render the small version without side padding 1`] = `
.c8 {
  padding: 0 20px 20px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c10 {
  width: 100%;
  border-width: 0px;
  border-left-width: 0px;
  border-bottom-width: 1px;
  border-color: #D7D7E0;
}

.c11 .c7 {
  padding-bottom: 16px;
}

.c12 .c7 {
  padding-bottom: 16px;
}

.c13 .c7 {
  padding-left: 0;
  padding-right: 0;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  z-index: 1;
  background: #FFFFFF;
}

.c0 hr {
  bottom: 0;
  left: 0;
  margin: 0;
  position: absolute;
  z-index: -1;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  padding: 16px 0px;
}

.c1:focus-visible {
  background: #F5F5FA;
}

.c2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: start;
  gap: 0px;
  margin: 8px 0;
}

.c6 {
  height: auto;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 200ms ease-in-out;
  transition: max-height 200ms ease-in-out;
}

.c6 .c7 {
  padding-bottom: 16px;
}

.c6 .c7 {
  padding-left: 0;
  padding-right: 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px;
}

.c5 svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: all 200ms ease-out 0s;
  transition: all 200ms ease-out 0s;
  fill: #D8385E;
}

<div
  class="c0"
>
  <button
    class="c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
      >
        Small
      </p>
      <p
        class="c4"
        color="deep"
      />
    </div>
    <div
      class="c5"
    >
      <svg
        height="24"
        width="24"
      />
    </div>
  </button>
  <div
    class="c6"
  >
    <div
      class="c7 c8"
    >
      <p
        class="c9"
      >
        Content
      </p>
    </div>
  </div>
  <hr
    class="c10"
  />
</div>
`;
